--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./dds.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React + Javascript + Replit</title>
-    <script type="module" crossorigin src="./assets/index.4426ae32.js"></script>
+    <title>Dead-dev studios </title>
+    <script type="module" crossorigin src="./assets/index.17218171.js"></script>
     <link rel="stylesheet" href="./assets/index.736b7dfc.css">
   </head>
   <body>
