--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="./assets/dds.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dead-dev studios </title>
-    <script type="module" crossorigin src="./assets/index.2f702df7.js"></script>
-    <link rel="stylesheet" href="./assets/index.f0636f41.css">
+    <script type="module" crossorigin src="/dist/assets/index.2a342484.js"></script>
+    <link rel="stylesheet" href="/dist/assets/index.f0636f41.css">
   </head>
   <body>
     <div id="root"></div>
