--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./assets/dds.svg" />
+    <link rel="icon" type="image/svg+xml" href="./dds.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dead-dev studios </title>
-    <script type="module" crossorigin src="./assets/index.05023afe.js"></script>
+    <script type="module" crossorigin src="./assets/index.f552a9cc.js"></script>
     <link rel="stylesheet" href="./assets/index.f0636f41.css">
   </head>
   <body>
